// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<ButtonPlain
  aria-current={false}
  className="hotspot-item"
  onClick={[Function]}
>
  <div
    className="little-spacer-left text-bold"
  >
    <IssueMessageHighlighting
      message="'3' is a magic number."
    />
  </div>
  <div
    className="display-flex-center big-spacer-top"
  >
    <QualifierIcon
      qualifier="FIL"
    />
    <div
      className="little-spacer-left hotspot-box-filename text-ellipsis"
      title="com.github.kevinsawicki.http.HttpRequest"
    >
      <bdi>
        com.github.kevinsawicki.http.HttpRequest
      </bdi>
    </div>
  </div>
</ButtonPlain>
`;

exports[`should render correctly 2`] = `
<ButtonPlain
  aria-current={true}
  className="hotspot-item highlight"
  onClick={[Function]}
>
  <div
    className="little-spacer-left text-bold cursor-pointer"
    onClick={[Function]}
  >
    <IssueMessageHighlighting
      message="'3' is a magic number."
    />
  </div>
  <div
    className="display-flex-center big-spacer-top"
  >
    <QualifierIcon
      qualifier="FIL"
    />
    <div
      className="little-spacer-left hotspot-box-filename text-ellipsis"
      title="com.github.kevinsawicki.http.HttpRequest"
    >
      <bdi>
        com.github.kevinsawicki.http.HttpRequest
      </bdi>
    </div>
  </div>
  <LocationsList
    componentKey="com.github.kevinsawicki:http-request:com.github.kevinsawicki.http.HttpRequest"
    locations={[]}
    onLocationSelect={[Function]}
    showCrossFile={false}
  />
</ButtonPlain>
`;
